# ScreenFilter

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: messengers.yaml
data/: predefined_classes.txt
model/v1/: results.csv
model/v3/: results.csv
src/screenfilter/: __main__.py  cli.py  web.py  yolo.py
src/screenfilter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/screenfilter/templates/: index.html
